# treesitter.run

./: .gitignore  Cargo.toml  README.md  index.html  justfile  manifest.json  manifest.toml  package.json  tree-sitter-agda.wasm  tree-sitter-bash.wasm  tree-sitter-bibtex.wasm  tree-sitter-bicep.wasm  tree-sitter-chatito.wasm  tree-sitter-cmake.wasm  tree-sitter-commonlisp.wasm  tree-sitter-cyberchef.wasm  tree-sitter-dart.wasm  tree-sitter-elixir.wasm  tree-sitter-elm.wasm  tree-sitter-embedded-template.wasm  tree-sitter-fennel.wasm  tree-sitter-gdscript.wasm  tree-sitter-gitattributes.wasm  tree-sitter-gleam.wasm  tree-sitter-gpg-config.wasm  tree-sitter-hcl.wasm  tree-sitter-html.wasm  tree-sitter-java.wasm  tree-sitter-julia.wasm  tree-sitter-kconfig.wasm  tree-sitter-llvm.wasm  tree-sitter-lua.wasm  tree-sitter-luau.wasm  tree-sitter-make.wasm  tree-sitter-markdown.wasm  tree-sitter-meson.wasm  tree-sitter-nix.wasm  tree-sitter-ocaml.wasm  tree-sitter-odin.wasm  tree-sitter-pem.wasm  (+25 more)
.github/workflows/: ci.yaml  update-parsers.yaml  web.yaml
assets/: index-07183549.js  index-128c81a5.js  index-1582a3c6.js  index-17a09341.js  index-24649a65.js  index-2b1845b4.css  index-5c9ee994.js  index-62aea630.js  index-692ebd16.js  index-70295996.js  index-7d724d5d.js  index-8fab6d40.css  index-9ef09280.js  index-ad6bc261.js  index-af2b8696.css  index-b78b72f9.js  index-bca5d1d8.js  index-c3185811.css
compiler/: Cargo.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  main.rs  verify.js
public/: tree-sitter-css.wasm
src/: App.tsx  app.tsx  arguments.rs  compiler.rs  index.css  main.rs  manager.rs  manifest.rs  parser.rs  reporter.rs  runnable.rs  subcommand.rs  verify.js  workspace.rs
www/: index.html  package.json  vite.config.ts
(+173 files in other folders)
