[workspace]
members = ["compiler"]
resolver = "3"

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"
wildcard_imports = "allow"

[profile.release]
codegen-units = 1
lto = true
