[package]
name = "treesitter-run"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]
members = ["."]
resolver = "3"

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"
wildcard_imports = "allow"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
indicatif = { version = "0.18.4", default-features = false, features = ["unicode-width"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.2"
