[package]
name = "compiler"
version = "0.0.0"
edition = "2024"
publish = false

[lints.rust]
unreachable_pub = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"
wildcard_imports = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.2"
